// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderedList /> can have a list style 1`] = `
<ol
  class="sc-eqUAAy gxGxiH sc-fqkvVR guxdMx sc-fqkvVR guxdMx"
>
  <li
    class="sc-aXZVg jUpfkX"
  >
    <span
      class="sc-gEvEer inVZch"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="sc-aXZVg jUpfkX"
  >
    <span
      class="sc-gEvEer inVZch"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> can have a list style 2`] = `
<ol
  class="sc-eqUAAy gxGxiH sc-fqkvVR kcbKFd sc-fqkvVR kcbKFd"
>
  <li
    class="sc-aXZVg jUpfkX"
  >
    <span
      class="sc-gEvEer inVZch"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="sc-aXZVg jUpfkX"
  >
    <span
      class="sc-gEvEer inVZch"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> renders 1`] = `
<ol
  class="sc-eqUAAy gxGxiH sc-fqkvVR guxdMx sc-fqkvVR guxdMx"
>
  <li
    class="sc-aXZVg jUpfkX"
  >
    <span
      class="sc-gEvEer inVZch"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="sc-aXZVg jUpfkX"
  >
    <span
      class="sc-gEvEer inVZch"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;
